--- a/lang/lang.common.json
+++ b/lang/lang.common.json
@@ -1,18 +1,12 @@
 {
     "bot": {
-        "name": "My Bot",
-        "author": "My Name"
+        "name": "M-chan",
+        "author": "@soshi_harami"
     },
     "commands": {
-        "dev": "dev",
-        "help": "help",
-        "info": "info",
-        "link": "link",
-        "test": "test",
-        "translate": "translate"
+	    "role-id": "role-id"
     },
     "arguments": {
-        "link": "link"
     },
     "colors": {
         "default": "#0099ff",
@@ -21,14 +15,8 @@
         "error": "#ff4a4a"
     },
     "links": {
-        "author": "https://github.com/",
-        "docs": "https://top.gg/",
-        "donate": "https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=EW389DYYSS4FC",
-        "invite": "https://discord.com/",
-        "source": "https://github.com/",
-        "stream": "https://www.twitch.tv/novakevin",
-        "support": "https://support.discord.com/",
-        "template": "https://github.com/KevinNovak/Discord-Bot-TypeScript-Template",
-        "vote": "https://top.gg/"
+        "author": "https://github.com/soshi_harami",
+        "source": "https://github.com/soshi_harami/M-chan",
+        "template": "https://github.com/KevinNovak/Discord-Bot-TypeScript-Template"
     }
 }
